traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:5: error: not found: value &&
    if (y%2 == 0) && (x != 6) {
                  ^